пофиксил App.css файл

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Montserrat', sans-serif;
-  background: url("../img/background.png") no-repeat;
+  background: url("./img/background.png") no-repeat;
   background-size: 100%;
   margin: 0;
   font-size: 18px;
